Added more to render, handle

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Youtube Api</h1>
     <form>
         <input type="text" id="search-term" />
-        <input type="submit" value="Go" />
+        <button type="submit">Search Here</button>
     </form>
     <ul class='results'></ul>
 
